@@ -4,11 +4,14 @@ import br.com.drs.radio.model.BlocoHorario;
 import br.com.drs.radio.model.ConfigRadio;
 import br.com.drs.radio.model.Programa;
 import br.com.drs.radio.model.ProgramacaoMusical;
+import br.com.drs.radio.model.enuns.DiasSemana;
 import br.com.drs.radio.repository.ProgramaRepository;
 import br.com.drs.radio.repository.ProgramacaoMusicalRepository;
+import jakarta.annotation.PostConstruct;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import tools.jackson.databind.JsonNode;
 import tools.jackson.databind.ObjectMapper;
 
 import java.io.File;
@@ -16,9 +19,7 @@ import java.io.IOException;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.stream.Collectors;
+import java.util.*;
 
 @Service
 @Slf4j
@@ -31,99 +32,145 @@ public class ProgramacaoMusicalService {
 
     public ProgramacaoMusical salvarProgramacao(ProgramacaoMusical programacaoMusical, ConfigRadio configRadio) {
         List<BlocoHorario> grade = gerarGradeDoDia(configRadio, programacaoMusical.getDataProgramacao());
-        salvarJson(grade, configRadio, programacaoMusical.getDataProgramacao());
+        try {
+            salvarJson(grade, configRadio, programacaoMusical.getDataProgramacao());
+        } catch (IOException e) {
+            log.error("Erro ao salvar arquivo JSON: {}", e.getMessage());
+        }
         return repository.save(programacaoMusical);
+    }
+
+    // Usamos JsonNode para ler o arquivo sem precisar das classes Musica/Artista
+    private JsonNode catalogoJson;
+    private final Set<Integer> idsTocadosNoDia = new HashSet<>();
+
+    @PostConstruct
+    public void carregarMusicas() {
+        try {
+            File file = new File("C:\\RadioTv\\Musicas.json");
+            if (file.exists()) {
+                // Tenta ler o catálogo
+                this.catalogoJson = objectMapper.readTree(file);
+                System.out.println("SISTEMA: Catálogo carregado com sucesso.");
+            } else {
+                System.err.println("SISTEMA: Arquivo Musicas.json não encontrado.");
+            }
+        } catch (Exception e) {
+            // Se houver erro de sintaxe, o sistema NÃO TRAVA mais
+            System.err.println("--- ERRO NO ARQUIVO JSON ---");
+            System.err.println("Verifique se faltam vírgulas no arquivo Musicas.json.");
+            System.err.println("Detalhe técnico: " + e.getMessage());
+            System.err.println("----------------------------");
+            this.catalogoJson = null; // Garante que o catálogo fique vazio mas o sistema ligue
+        }
     }
 
     public List<BlocoHorario> gerarGradeDoDia(ConfigRadio configRadio, LocalDate data) {
         List<BlocoHorario> gradeSugerida = new ArrayList<>();
         DateTimeFormatter dtf = DateTimeFormatter.ofPattern("HH:mm:ss");
+        idsTocadosNoDia.clear();
 
         List<Programa> todosProgramas = programaRepository.findAll().stream()
                 .filter(p -> p.getAtivo() != null && p.getAtivo())
-                .collect(Collectors.toList());
+                .toList();
 
         LocalTime tempoAtual = LocalTime.MIDNIGHT;
-        int intervaloPadrao = (configRadio.getIntervaloMusical() != null && configRadio.getIntervaloMusical() > 0)
-                ? configRadio.getIntervaloMusical() : 60;
+        int intervaloPadrao = (configRadio.getIntervaloMusical() != null && configRadio.getIntervaloMusical() > 0) ? configRadio.getIntervaloMusical() : 60;
+        DiasSemana diaEnumHoje = converterParaSeuEnum(data.getDayOfWeek());
 
-        // Usamos um while em vez de for para controlar o avanço do tempo manualmente
-        while (tempoAtual.isBefore(LocalTime.MAX) && !tempoAtual.equals(LocalTime.MIDNIGHT.minusSeconds(1))) {
-            Programa programaAtual = buscarProgramaNoBanco(tempoAtual, data, todosProgramas);
+        while (true) {
+            Programa programaAtual = buscarProgramaNoBanco(tempoAtual, diaEnumHoje, todosProgramas);
+            String nomeProg = (programaAtual != null) ? programaAtual.getNomePrograma() : "Programação Musical";
 
-            if (programaAtual != null && programaAtual.getTemBreaks() != null && !programaAtual.getTemBreaks()) {
-                // Caso 1: Programa SEM BREAKS (ex: A Voz do Brasil)
-                // Calcula a duração total do programa em minutos
-                long duracaoTotal = java.time.Duration.between(programaAtual.getHorarioInicio(), programaAtual.getHorarioTermino()).toMinutes();
-                if (duracaoTotal < 0) duracaoTotal += 1440; // Trata virada de dia
+            BlocoHorario bloco = new BlocoHorario(tempoAtual.format(dtf), nomeProg, configRadio.getDuracaoMusical());
+            bloco.setMusicas(new ArrayList<>());
 
-                gradeSugerida.add(new BlocoHorario(
-                        tempoAtual.format(dtf),
-                        programaAtual.getNomePrograma(),
-                        (int) duracaoTotal // Duração alvo é o tempo total do programa
-                ));
-
-                // Salta o tempo direto para o fim do programa
+            if (programaAtual != null && Boolean.FALSE.equals(programaAtual.getTemBreaks())) {
+                bloco.setDuracaoAlvo(0);
+                gradeSugerida.add(bloco);
                 tempoAtual = programaAtual.getHorarioTermino();
             } else {
-                // Caso 2: Programação normal com breaks (fatiada de 15 em 15 min)
-                String nomeProg = (programaAtual != null) ? programaAtual.getNomePrograma() : "Programação Musical";
-
-                gradeSugerida.add(new BlocoHorario(
-                        tempoAtual.format(dtf),
-                        nomeProg,
-                        configRadio.getDuracaoMusical()
-                ));
-
+                preencherBloco(bloco);
+                gradeSugerida.add(bloco);
                 tempoAtual = tempoAtual.plusMinutes(intervaloPadrao);
             }
 
-            // Condição de saída para evitar loop infinito na meia-noite
             if (tempoAtual.equals(LocalTime.MIDNIGHT)) break;
         }
         return gradeSugerida;
     }
 
-    private Programa buscarProgramaNoBanco(LocalTime hora, LocalDate data, List<Programa> programas) {
-        // Traduz o dia da semana do Java para o índice ou nome do seu Enum
-        int diaSemanaJava = data.getDayOfWeek().getValue(); // 1 (Seg) a 7 (Dom)
+    private void preencherBloco(BlocoHorario bloco) {
+        if (catalogoJson == null || !catalogoJson.isArray()) return;
 
+        long alvoSegundos = bloco.getDuracaoAlvo() * 60L;
+        long acumulado = 0;
+
+        // Criamos uma lista temporária para embaralhar a seleção
+        List<JsonNode> musicas = new ArrayList<>();
+        catalogoJson.forEach(musicas::add);
+        Collections.shuffle(musicas);
+
+        for (JsonNode m : musicas) {
+            boolean ativo = m.get("ativo").asBoolean();
+            boolean nacional = m.get("nacional").asBoolean();
+            int id = m.get("id").asInt();
+            String tempoStr = m.get("tempoMusica").asText();
+
+            // Filtro de programa
+            if (!ativo) continue;
+            if ("Expresso Nacional".equalsIgnoreCase(bloco.getPrograma()) && !nacional) continue;
+
+            long duracaoM = converterTempoParaSegundos(tempoStr);
+
+            if (duracaoM > 0 && !idsTocadosNoDia.contains(id)) {
+                if (acumulado + duracaoM <= alvoSegundos + 45) {
+                    bloco.getMusicas().add(id);
+                    idsTocadosNoDia.add(id);
+                    acumulado += duracaoM;
+                }
+            }
+            if (acumulado >= alvoSegundos) return;
+        }
+    }
+
+    private long converterTempoParaSegundos(String tempo) {
+        try {
+            String[] partes = tempo.split(":");
+            return Long.parseLong(partes[0]) * 3600 + Long.parseLong(partes[1]) * 60 + Long.parseLong(partes[2]);
+        } catch (Exception e) { return 0; }
+    }
+
+    private DiasSemana converterParaSeuEnum(java.time.DayOfWeek dayOfWeek) {
+        return switch (dayOfWeek) {
+            case MONDAY -> DiasSemana.SEGUNDA;
+            case TUESDAY -> DiasSemana.TERCA;
+            case WEDNESDAY -> DiasSemana.QUARTA;
+            case THURSDAY -> DiasSemana.QUINTA;
+            case FRIDAY -> DiasSemana.SEXTA;
+            case SATURDAY -> DiasSemana.SABADO;
+            case SUNDAY -> DiasSemana.DOMINGO;
+        };
+    }
+
+    private Programa buscarProgramaNoBanco(LocalTime hora, DiasSemana diaHoje, List<Programa> programas) {
         return programas.stream()
-                .filter(p -> p.getDiasSemana().stream().anyMatch(d -> {
-                    // Compara pelo ordinal (posição no Enum) para evitar erro de nomes (Inglês vs Português)
-                    // Se seu Enum segue a ordem: SEGUNDA, TERCA, QUARTA, QUINTA, SEXTA, SABADO, DOMINGO
-                    return (d.ordinal() + 1) == diaSemanaJava;
-                }))
+                .filter(p -> p.getDiasSemana() != null && p.getDiasSemana().contains(diaHoje))
                 .filter(p -> {
                     LocalTime inicio = p.getHorarioInicio();
                     LocalTime fim = p.getHorarioTermino();
-
-                    // Trata programas que terminam meia-noite
-                    if (fim.equals(LocalTime.MIDNIGHT)) {
-                        return !hora.isBefore(inicio);
-                    }
-
-                    if (inicio.isBefore(fim)) {
-                        // Horário normal (ex: 08:00 as 12:00)
-                        return (hora.equals(inicio) || hora.isAfter(inicio)) && hora.isBefore(fim);
-                    } else {
-                        // Horário que vira o dia (ex: 22:00 as 02:00)
-                        return (hora.equals(inicio) || hora.isAfter(inicio)) || hora.isBefore(fim);
-                    }
+                    if (fim.equals(LocalTime.MIDNIGHT)) return !hora.isBefore(inicio);
+                    if (inicio.isBefore(fim)) return (hora.equals(inicio) || hora.isAfter(inicio)) && hora.isBefore(fim);
+                    else return (hora.equals(inicio) || hora.isAfter(inicio)) || hora.isBefore(fim);
                 })
-                .findFirst()
-                .orElse(null);
+                .findFirst().orElse(null);
     }
 
-    public void salvarJson(List<BlocoHorario> grade, ConfigRadio config, LocalDate data) {
+    public void salvarJson(List<BlocoHorario> grade, ConfigRadio config, LocalDate data) throws IOException {
         String nomeArquivo = "programacaoMusical_" + data.toString() + ".json";
         String pasta = (config.getPastaRoteiroMusical() != null) ? config.getPastaRoteiroMusical() : "roteiros";
-
         File diretorio = new File(pasta);
         if (!diretorio.exists()) diretorio.mkdirs();
-
-        File arquivo = new File(diretorio, nomeArquivo);
-        objectMapper.writerWithDefaultPrettyPrinter().writeValue(arquivo, grade);
-        log.info("Roteiro salvo em: " + arquivo.getAbsolutePath());
+        objectMapper.writerWithDefaultPrettyPrinter().writeValue(new File(diretorio, nomeArquivo), grade);
     }
 }
